# EU_EtherCAT

./: .gitignore  README.md
EU_robot_arm_gui/: CMakeLists.txt  README.md  cli_main.cpp  ecworker.cpp  ecworker.h  mainwindow.cpp  mainwindow.h  问题总结.md
EU_robot_arm_gui/app/: EU_robot_arm_cli  EU_robot_arm_gui  EU_robot_arm_gui.conf  robot_motions.json
EU_robot_arm_gui/build-compat/: CMakeCache.txt  EU_robot_arm_cli  EU_robot_arm_gui  Makefile  cmake_install.cmake
EU_robot_arm_gui/build-compat/EU_robot_arm_cli_autogen/: mocs_compilation.cpp
EU_robot_arm_gui/build-compat/EU_robot_arm_cli_autogen/EWIEGA46WW/: moc_ecworker.cpp  moc_ecworker.cpp.d
EU_robot_arm_gui/build-compat/EU_robot_arm_gui_autogen/: mocs_compilation.cpp
EU_robot_arm_gui/build-compat/EU_robot_arm_gui_autogen/EWIEGA46WW/: moc_ecworker.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
EU_robot_arm_gui/docs/: 机械臂动作录制播放提示词.md
EU_robot_arm_gui/xml/: EYOU_ServoModule_ECAT_V143.xml  EYOU_ServoModule_ECAT_V145.xml  EYOU_ServoModule_ECAT_V145_no_slot.xml
demo/EYouEcTestDemo_260320/: EYouEcTestDemo_1.0.deb  安装说明.txt
demo/IGH-ethLab_test_DC_20260108/: CMakeLists.txt  main.cpp
demo/ethLab_gui/: main.cpp  mainwindow.h
demo/ethLab_gui/docs/: 实时内核方案.md
demo/ethLab_gui/xml/: EYOU_ServoModule_ECAT_V143_no_slot.xml
doc/: igh etherlab使用及开发参考文档20260108.docx  test.txt
ethLab_gui/: CMakeLists copy.bak  CMakeLists.txt  README.md  ecworker.cpp  ecworker.h  mainwindow.cpp  mainwindow.h  机械臂动作录制播放提示词.md
ethLab_gui/xml/: 意优XML描述文件说明.txt
